results/579c43ea162447fd3cd941261608072d/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, 'm,c', x, '{"m":{"priortype":"Uniform","minval":"-1","maxval":"1","meanval":0,"sigmaval":0},"c":{"priortype":"Uniform","minval":"-10","maxval":"10","meanval":0,"sigmaval":0}}', 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 579c43ea162447fd3cd941261608072d, {modelStrings}, 'x, 0.65,')
                                                                                                                                                                                                                                                         ^
SyntaxError: invalid syntax
